<resources>
    <string name="app_name">Nozio</string>
    <string name="widget_description">Kalorienübersicht und Schnellzugriffe</string>
    <string name="widget_description_compact">Kompaktes Kalorien-Widget</string>
    <string name="widget_description_expanded">Großes Kalorien- und Makro-Widget</string>
    <string name="widget_name_compact">Nozio Kompakt</string>
    <string name="widget_name_expanded">Nozio Groß</string>
    <string name="widget_zero">0</string>
    <string name="widget_macro_value_placeholder">0 / 0 g</string>
    <string name="widget_eaten">Gegessen</string>
    <string name="widget_burned">Verbrannt</string>
    <string name="widget_remaining">Übrig</string>
    <string name="widget_overeaten">Zu viel</string>
    <string name="widget_carbs">Kohlenhydrate</string>
    <string name="widget_protein">Eiweiß</string>
    <string name="widget_fat">Fett</string>
    <string name="widget_scan">Barcode scannen</string>
    <string name="widget_add_food">Suche öffnen</string>
</resources>
